  - Add "minimum_update_interval" option in Compatibility config,
    which sets minimum refresh rate limit for widget and module in milliseconds.
    This option is used for preventing extremely low refresh rate
    that may cause performance issues in case user incorrectly sets
    "update_interval" and "idle_update_interval" values.
    Default value is `10`, and should not be modified.

* Flag Widget
  - Optimized flag update.

* Gear Widget
  - Fixed a typo in "battery_bar_color_regen" default value,
    which would not show regeneration color.

* Lap time history Widget
  - Fixed missing fuel unit conversion for gallon.
  - Optimized lap history update.

* Sectors Widget
  - Now shows laptime "time gap" on "target time" bar,
    which shows laptime difference between current laptime and target laptime.
    Target laptime source depends on new "target_laptime" option.
  - Add new "target_laptime" option,
    which sets target laptime for display target reference lap and sector time.
    Set `Theoretical` to show theoretical best sector time from session best sectors.
    Set `Personal` to show sector time from personal best lap time.
  - Removed old "target_time_mode" options.
  - Removed old "always_show_laptime_gap" options.

* Stint history Widget
  - Optimized stint history update.

* Shared Memory API
  - Fixed a rare issue where rapidly restarting API could freeze the APP.

2.11.1 (2024-03-28)
-----------------------------
* Trailing Widget
  - Add "draw_order_index_*" options,
    which sets draw order of plot lines.

2.11.0 (2024-03-28)
-----------------------------
* [New]Fuel calculator
  - New "Fuel Calculator" can be accessed from Tools menu in main window.
    Editable options:
      * Lap time (minute:second:millisecond), can be auto-filled by Reload.
      * Tank capacity (liter or gallon), can be auto-filled by Reload.
      * Fuel consumption (liter or gallon), can be auto-filled by Reload.
      * Race length in minutes.