@@ -63,6 +63,7 @@ class Draw(Overlay):
         self.prefix_labest = self.wcfg["prefix_deltalast"][:prefix_w].ljust(prefix_just)
 
         time_none = "--.---"
+        self.freeze_duration = min(max(self.wcfg["freeze_duration"], 0), 10)
 
         # Base style
         self.setStyleSheet(
@@ -154,6 +155,8 @@ class Draw(Overlay):
         self.last_session_deltabest = 0
         self.last_stint_deltabest = 0
         self.last_deltalast = 0
+        self.last_laptimes = [0,0,0,0]
+        self.new_lap = True
 
         # Set widget state & start update
         self.set_widget_state()
@@ -163,30 +166,45 @@ class Draw(Overlay):
         """Update when vehicle on track"""
         if api.state:
 
+            if minfo.delta.lapTimeCurrent < self.freeze_duration:
+                all_time_deltabest = minfo.delta.lapTimeLast - self.last_laptimes[0]
+                session_deltabest = minfo.delta.lapTimeLast - self.last_laptimes[1]
+                stint_deltabest = minfo.delta.lapTimeLast - self.last_laptimes[2]
+                deltalast = minfo.delta.lapTimeLast - self.last_laptimes[3]
+                self.new_lap = True
+            else:
+                if self.new_lap:
+                    self.last_laptimes[0] = minfo.delta.lapTimeBest
+                    self.last_laptimes[1] = minfo.delta.lapTimeSession
+                    self.last_laptimes[2] = minfo.delta.lapTimeStint
+                    self.last_laptimes[3] = minfo.delta.lapTimeLast
+                    self.new_lap = False
+
+                all_time_deltabest = minfo.delta.deltaBest
+                session_deltabest = minfo.delta.deltaSession
+                stint_deltabest = minfo.delta.deltaStint
+                deltalast = minfo.delta.deltaLast
+
             # All time deltabest
             if self.wcfg["show_all_time_deltabest"]:
-                all_time_deltabest = minfo.delta.deltaBest
                 self.update_deltabest(all_time_deltabest, self.last_all_time_deltabest,
                                       self.prefix_atbest, "atbest")
                 self.last_all_time_deltabest = all_time_deltabest
 
             # Session deltabest
             if self.wcfg["show_session_deltabest"]:
-                session_deltabest = minfo.delta.deltaSession
                 self.update_deltabest(session_deltabest, self.last_session_deltabest,
                                       self.prefix_ssbest, "ssbest")
                 self.last_session_deltabest = session_deltabest
 
             # Stint deltabest
             if self.wcfg["show_stint_deltabest"]:
-                stint_deltabest = minfo.delta.deltaStint
                 self.update_deltabest(stint_deltabest, self.last_stint_deltabest,
                                       self.prefix_stbest, "stbest")
                 self.last_stint_deltabest = stint_deltabest
 
             # Deltalast
             if self.wcfg["show_stint_deltabest"]:
-                deltalast = minfo.delta.deltaLast
                 self.update_deltabest(deltalast, self.last_deltalast,
                                       self.prefix_labest, "labest")
                 self.last_deltalast = deltalast
