@@ -19,6 +19,12 @@ WIP
     "update_interval" and "idle_update_interval" values.
     Default value is `10`, and should not be modified.
 
+* Deltabest & Deltabest extended Widgets
+  - Add "freeze_duration" option, which sets freeze duration (seconds)
+    for displaying previous lap time difference against best lap time source
+    after crossing finish line. Value range in "0" to "10" seconds.
+    Default is `3` seconds. Set to `0` to disable.
+
 * Flag Widget
   - Optimized flag update.
 
